objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Offering__c</fullName>
        <label>DRE Internal Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Offering_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Period__c</fullName>
        <description>Revenue period in months.</description>
        <inlineHelpText>Revenue period in months.</inlineHelpText>
        <label>Revenue Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pseudo_Key__c</fullName>
        <externalId>true</externalId>
        <label>Pseudo Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>